--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
-  }
+  },
+  "lint-staged": {
+		"*.js": "npm run lint",
+		"*.{js,css,md,html,json}": "npm run format"
+	}
 }
